--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,6 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "sourceMap": false,
-    "target": "ES6",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "newLine": "LF",
-    "strict": true,
-    "allowJs": true,
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "downlevelIteration": true,
-    "noUnusedLocals": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "removeComments": false,
-    "jsx": "preserve",
-    "lib": [
-      "esnext"
-    ]
-  },
+  "extends": "./tsconfig.base.json",
   "include": [
-    "types"
+    "src"
   ]
 }
