build(ts): 修改编译目标

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "sourceMap": false,
-    "target": "es5",
-    "module": "esnext",
+    "target": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
     "newLine": "LF",
     "strict": true,
@@ -20,8 +20,8 @@
     "removeComments": false,
     "jsx": "preserve",
     "lib": [
-      "esnext",
-      "dom"
+      "ESNext",
+      "DOM"
     ]
   }
 }
