--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bombyx",
   "version": "1.1.0",
-  "description": "前端开发环境补充",
+  "description": "Supplementary configuration for front-end development environments.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
