--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bombyx",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Supplementary configuration for front-end development environments.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -20,6 +20,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "boxen": "^7.1.1",
     "cac": "^6.7.14",
     "celia": "^9.0.1",
     "execa": "^7.2.0",
