--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bombyx",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Supplementary configuration for front-end development environments.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -13,7 +13,7 @@
     "node-dev": ">=18"
   },
   "scripts": {
-    "deps": "npm run clean && npm i",
+    "deps": "npm run clean && pnpm i",
     "clean": "rm -rf node_modules",
     "eslint": "eslint --ext .js,.mjs,.jsx --fix --ignore-path .eslintignore ./",
     "prepare": "husky",
@@ -37,6 +37,7 @@
     "@commitlint/cli": "^19.2.0",
     "@commitlint/config-conventional": "^19.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.12.7",
     "eslint": "^8.57.0",
     "eslint-config-fe": "^2.1.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
